--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,149 +9,151 @@
 
   {% include "./templates/header.twig" %}
 
-  <main class="main page__centerer">
-    <h1 class="catalog-title">Каталог продукции</h1>
-    <ul class="products-list">
-      <li class="product-card">
-        <img class="product-card__image" src="img/catalog/chiken500.png" alt="Курица">
-        <div class="product-card__text">
-          <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
-          <span class="product-card__item-name">Масса</span>
-          <span class="product-card__item-value">500 г</span>
-          <span class="product-card__item-name">Вкус</span>
-          <span class="product-card__item-value">Курица</span>
-          <span class="product-card__item-name">Цена</span>
-          <span class="product-card__item-value">700 Р.</span>
-        </div>
-        <a href="#" class="product-card__button">заказать</a>
-      </li>
-      <li class="product-card">
-        <img class="product-card__image" src="img/catalog/fish1000.png" alt="Курица">
-        <div class="product-card__text">
-          <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
-          <span class="product-card__item-name">Масса</span>
-          <span class="product-card__item-value">1000 г</span>
-          <span class="product-card__item-name">Вкус</span>
-          <span class="product-card__item-value">Курица</span>
-          <span class="product-card__item-name">Цена</span>
-          <span class="product-card__item-value">1000 Р.</span>
-        </div>
-        <a href="#" class="product-card__button">заказать</a>
-      </li>
-      <li class="product-card">
-        <img class="product-card__image" src="img/catalog/fish500.png" alt="Рыба">
-        <div class="product-card__text">
-          <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
-          <span class="product-card__item-name">Масса</span>
-          <span class="product-card__item-value">500 г</span>
-          <span class="product-card__item-name">Вкус</span>
-          <span class="product-card__item-value">Рыба</span>
-          <span class="product-card__item-name">Цена</span>
-          <span class="product-card__item-value">700 Р.</span>
-        </div>
-        <a href="#" class="product-card__button">заказать</a>
-      </li>
-      <li class="product-card">
-        <img class="product-card__image" src="img/catalog/fish1000.png" alt="Рыба">
-        <div class="product-card__text">
-          <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
-          <span class="product-card__item-name">Масса</span>
-          <span class="product-card__item-value">1000 г</span>
-          <span class="product-card__item-name">Вкус</span>
-          <span class="product-card__item-value">Рыба</span>
-          <span class="product-card__item-name">Цена</span>
-          <span class="product-card__item-value">1000 Р.</span>
-        </div>
-        <a href="#" class="product-card__button">заказать</a>
-      </li>
-      <li class="product-card">
-        <img class="product-card__image" src="img/catalog/buckwheat500.png" alt="Гречка">
-        <div class="product-card__text">
-          <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
-          <span class="product-card__item-name">Масса</span>
-          <span class="product-card__item-value">500 г</span>
-          <span class="product-card__item-name">Вкус</span>
-          <span class="product-card__item-value">Гречка</span>
-          <span class="product-card__item-name">Цена</span>
-          <span class="product-card__item-value">400 Р.</span>
-        </div>
-        <a href="#" class="product-card__button">заказать</a>
-      </li>
-      <li class="product-card">
-        <img class="product-card__image" src="img/catalog/buckwheat1000.png" alt="Гречка">
-        <div class="product-card__text">
-          <span class="product-card__title">Cat Energy slim 1000&nbsp;г</span>
-          <span class="product-card__item-name">Масса</span>
-          <span class="product-card__item-value">1000 г</span>
-          <span class="product-card__item-name">Вкус</span>
-          <span class="product-card__item-value">Гречка</span>
-          <span class="product-card__item-name">Цена</span>
-          <span class="product-card__item-value">700 Р.</span>
-        </div>
-        <a href="#" class="product-card__button">заказать</a>
-      </li>
-      <li class="product-card">
-        <img class="product-card__image" src="img/catalog/rice500.png" alt="Рис">
-        <div class="product-card__text">
-          <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
-          <span class="product-card__item-name">Масса</span>
-          <span class="product-card__item-value">500 г</span>
-          <span class="product-card__item-name">Вкус</span>
-          <span class="product-card__item-value">Рис</span>
-          <span class="product-card__item-name">Цена</span>
-          <span class="product-card__item-value">500 Р.</span>
-        </div>
-        <a href="#" class="product-card__button">заказать</a>
-      </li>
-      <li class="show-more">
-        <p class="show-more__important-text">Показать еще 100500 товаров</p>
-        <p class="show-more__regular-text">На&nbsp;самом деле вкусов гораздо больше!</p>
-        <a href="#" class="show-more__button">показать все</a>
-      </li>
-    </ul>
-    <section class="additional">
-      <h2 class="additional__title">Дополнительные товары</h2>
-      <ul class="additional__products-list">
-        <li class="product-item">
-          <span class="product-item__name">сахарозаменитель</span>
-          <span class="product-item__unit">1 упаковка (100 г)</span>
-          <span class="product-item__price">200 Р.</span>
-          <a href="#" class="product-item__order-button">заказать</a>
+  <main class="main">
+    <div class="page__centerer">
+      <h1 class="catalog-title">Каталог продукции</h1>
+      <ul class="products-list">
+        <li class="product-card">
+          <img class="product-card__image" src="img/catalog/chiken500.png" alt="Курица">
+          <div class="product-card__text">
+            <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
+            <span class="product-card__item-name">Масса</span>
+            <span class="product-card__item-value">500 г</span>
+            <span class="product-card__item-name">Вкус</span>
+            <span class="product-card__item-value">Курица</span>
+            <span class="product-card__item-name">Цена</span>
+            <span class="product-card__item-value">700 Р.</span>
+          </div>
+          <a href="#" class="product-card__button">заказать</a>
         </li>
-        <li class="product-item">
-          <span class="product-item__name">питьевая вода</span>
-          <span class="product-item__unit">5 литров</span>
-          <span class="product-item__price">50 Р.</span>
-          <a href="#" class="product-item__order-button">заказать</a>
+        <li class="product-card">
+          <img class="product-card__image" src="img/catalog/fish1000.png" alt="Курица">
+          <div class="product-card__text">
+            <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
+            <span class="product-card__item-name">Масса</span>
+            <span class="product-card__item-value">1000 г</span>
+            <span class="product-card__item-name">Вкус</span>
+            <span class="product-card__item-value">Курица</span>
+            <span class="product-card__item-name">Цена</span>
+            <span class="product-card__item-value">1000 Р.</span>
+          </div>
+          <a href="#" class="product-card__button">заказать</a>
         </li>
-        <li class="product-item">
-          <span class="product-item__name">молоко</span>
-          <span class="product-item__unit">1 литр</span>
-          <span class="product-item__price">100 Р.</span>
-          <a href="#" class="product-item__order-button">заказать</a>
+        <li class="product-card">
+          <img class="product-card__image" src="img/catalog/fish500.png" alt="Рыба">
+          <div class="product-card__text">
+            <span class="product-card__title">Cat Energy PRO 500&nbsp;г</span>
+            <span class="product-card__item-name">Масса</span>
+            <span class="product-card__item-value">500 г</span>
+            <span class="product-card__item-name">Вкус</span>
+            <span class="product-card__item-value">Рыба</span>
+            <span class="product-card__item-name">Цена</span>
+            <span class="product-card__item-value">700 Р.</span>
+          </div>
+          <a href="#" class="product-card__button">заказать</a>
         </li>
-        <li class="product-item">
-          <span class="product-item__name">витамины</span>
-          <span class="product-item__unit">1 упаковка (30 г)</span>
-          <span class="product-item__price">300 Р.</span>
-          <a href="#" class="product-item__order-button">заказать</a>
+        <li class="product-card">
+          <img class="product-card__image" src="img/catalog/fish1000.png" alt="Рыба">
+          <div class="product-card__text">
+            <span class="product-card__title">Cat Energy PRO 1000&nbsp;г</span>
+            <span class="product-card__item-name">Масса</span>
+            <span class="product-card__item-value">1000 г</span>
+            <span class="product-card__item-name">Вкус</span>
+            <span class="product-card__item-value">Рыба</span>
+            <span class="product-card__item-name">Цена</span>
+            <span class="product-card__item-value">1000 Р.</span>
+          </div>
+          <a href="#" class="product-card__button">заказать</a>
+        </li>
+        <li class="product-card">
+          <img class="product-card__image" src="img/catalog/buckwheat500.png" alt="Гречка">
+          <div class="product-card__text">
+            <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
+            <span class="product-card__item-name">Масса</span>
+            <span class="product-card__item-value">500 г</span>
+            <span class="product-card__item-name">Вкус</span>
+            <span class="product-card__item-value">Гречка</span>
+            <span class="product-card__item-name">Цена</span>
+            <span class="product-card__item-value">400 Р.</span>
+          </div>
+          <a href="#" class="product-card__button">заказать</a>
+        </li>
+        <li class="product-card">
+          <img class="product-card__image" src="img/catalog/buckwheat1000.png" alt="Гречка">
+          <div class="product-card__text">
+            <span class="product-card__title">Cat Energy slim 1000&nbsp;г</span>
+            <span class="product-card__item-name">Масса</span>
+            <span class="product-card__item-value">1000 г</span>
+            <span class="product-card__item-name">Вкус</span>
+            <span class="product-card__item-value">Гречка</span>
+            <span class="product-card__item-name">Цена</span>
+            <span class="product-card__item-value">700 Р.</span>
+          </div>
+          <a href="#" class="product-card__button">заказать</a>
+        </li>
+        <li class="product-card">
+          <img class="product-card__image" src="img/catalog/rice500.png" alt="Рис">
+          <div class="product-card__text">
+            <span class="product-card__title">Cat Energy slim 500&nbsp;г</span>
+            <span class="product-card__item-name">Масса</span>
+            <span class="product-card__item-value">500 г</span>
+            <span class="product-card__item-name">Вкус</span>
+            <span class="product-card__item-value">Рис</span>
+            <span class="product-card__item-name">Цена</span>
+            <span class="product-card__item-value">500 Р.</span>
+          </div>
+          <a href="#" class="product-card__button">заказать</a>
+        </li>
+        <li class="show-more">
+          <p class="show-more__important-text">Показать еще 100500 товаров</p>
+          <p class="show-more__regular-text">На&nbsp;самом деле вкусов гораздо больше!</p>
+          <a href="#" class="show-more__button">показать все</a>
         </li>
       </ul>
-      <div class="ad">
-        <p class="ad__text">Закажите все<br>и&nbsp;получите чехол для<br>кота в&nbsp;подарок!</p>
-      </div>
-    </section>
-  </main>
-  <section class="contacts">
-    <div class="page__centerer">
-      <h2 class="visually-hidden">Наш адрес</h2>
-      <div class="contacts__text">
-        <p class="contacts__lead-text">приглашаем<br>к&nbsp;сотрудничеству<br>дилеров!</p>
-        <p class="contacts__adress">ул. Большая<br>Конюшенная, д. 19/8 <span class="contacts__adress-city">Санкт-Петербург</span></p>
+      <section class="additional">
+        <h2 class="additional__title">Дополнительные товары</h2>
+        <ul class="additional__products-list">
+          <li class="product-item">
+            <span class="product-item__name">сахарозаменитель</span>
+            <span class="product-item__unit">1 упаковка (100 г)</span>
+            <span class="product-item__price">200 Р.</span>
+            <a href="#" class="product-item__order-button">заказать</a>
+          </li>
+          <li class="product-item">
+            <span class="product-item__name">питьевая вода</span>
+            <span class="product-item__unit">5 литров</span>
+            <span class="product-item__price">50 Р.</span>
+            <a href="#" class="product-item__order-button">заказать</a>
+          </li>
+          <li class="product-item">
+            <span class="product-item__name">молоко</span>
+            <span class="product-item__unit">1 литр</span>
+            <span class="product-item__price">100 Р.</span>
+            <a href="#" class="product-item__order-button">заказать</a>
+          </li>
+          <li class="product-item">
+            <span class="product-item__name">витамины</span>
+            <span class="product-item__unit">1 упаковка (30 г)</span>
+            <span class="product-item__price">300 Р.</span>
+            <a href="#" class="product-item__order-button">заказать</a>
+          </li>
+        </ul>
+        <div class="ad">
+          <p class="ad__text">Закажите все<br>и&nbsp;получите чехол для<br>кота в&nbsp;подарок!</p>
+        </div>
+      </section>
+    </div>
+    <section class="contacts">
+      <div class="page__centerer">
+        <h2 class="visually-hidden">Наш адрес</h2>
+        <div class="contacts__text">
+          <p class="contacts__lead-text">приглашаем<br>к&nbsp;сотрудничеству<br>дилеров!</p>
+          <p class="contacts__adress">ул. Большая<br>Конюшенная, д. 19/8 <span class="contacts__adress-city">Санкт-Петербург</span></p>
+        </div>
       </div>
       <div class="contacts__map"></div>
-    </div>
-  </section>
+    </section>
+  </main>
 
   {% include "./templates/footer.twig" %}
 
