product-list-grid-gap--CAT--and-product-item-to-additional__item

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -113,29 +113,29 @@
       <section class="additional">
         <h2 class="additional__title">Дополнительные товары</h2>
         <ul class="additional__products-list">
-          <li class="product-item">
-            <span class="product-item__name">сахарозаменитель</span>
-            <span class="product-item__unit">1 упаковка (100 г)</span>
-            <span class="product-item__price">200 Р.</span>
-            <a href="#" class="product-item__order-button">заказать</a>
+          <li class="additional__item">
+            <span class="additional__item-name">сахарозаменитель</span>
+            <span class="additional__item-unit">1 упаковка (100 г)</span>
+            <span class="additional__item-price">200 Р.</span>
+            <a href="#" class="additional__item-order-button">заказать</a>
           </li>
-          <li class="product-item">
-            <span class="product-item__name">питьевая вода</span>
-            <span class="product-item__unit">5 литров</span>
-            <span class="product-item__price">50 Р.</span>
-            <a href="#" class="product-item__order-button">заказать</a>
+          <li class="additional__item">
+            <span class="additional__item-name">питьевая вода</span>
+            <span class="additional__item-unit">5 литров</span>
+            <span class="additional__item-price">50 Р.</span>
+            <a href="#" class="additional__item-order-button">заказать</a>
           </li>
-          <li class="product-item">
-            <span class="product-item__name">молоко</span>
-            <span class="product-item__unit">1 литр</span>
-            <span class="product-item__price">100 Р.</span>
-            <a href="#" class="product-item__order-button">заказать</a>
+          <li class="additional__item">
+            <span class="additional__item-name">молоко</span>
+            <span class="additional__item-unit">1 литр</span>
+            <span class="additional__item-price">100 Р.</span>
+            <a href="#" class="additional__item-order-button">заказать</a>
           </li>
-          <li class="product-item">
-            <span class="product-item__name">витамины</span>
-            <span class="product-item__unit">1 упаковка (30 г)</span>
-            <span class="product-item__price">300 Р.</span>
-            <a href="#" class="product-item__order-button">заказать</a>
+          <li class="additional__item">
+            <span class="additional__item-name">витамины</span>
+            <span class="additional__item-unit">1 упаковка (30 г)</span>
+            <span class="additional__item-price">300 Р.</span>
+            <a href="#" class="additional__item-order-button">заказать</a>
           </li>
         </ul>
         <div class="ad">
