--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
       Cat energy
     </h1>
     <div class="page__centerer">
-      <section class="promo">
+      <section class="promo background-promo">
         <div class="promo__text-container">
           <h2 class="promo__title">Функциональное<br>питание&nbsp;для&nbsp;котов</h2>
           <p class="promo__text">Занялся собой? Займись котом!</p>
