--- a/source/form.html
+++ b/source/form.html
@@ -63,16 +63,7 @@
           <p class="requireds-description">* — Обязательные поля</p>
         </form>
       </div>
-      <section class="contacts">
-        <div class="page__centerer">
-          <h2 class="visually-hidden">Наш адрес</h2>
-          <div class="contacts__text">
-            <p class="contacts__lead-text">приглашаем<br>к&nbsp;сотрудничеству<br>дилеров!</p>
-            <p class="contacts__adress">ул. Большая<br>Конюшенная, д. 19/8 <span class="contacts__adress-city">Санкт-Петербург</span></p>
-          </div>
-        </div>
-        <div class="contacts__map"></div>
-      </section>
+      {% include "./templates/contacts.twig" %}
     </main>
 
 
