--- a/source/index.html
+++ b/source/index.html
@@ -15,17 +15,15 @@
     <h1 class="page__title-hidden visually-hidden">
       Cat energy
     </h1>
-    <section class="promo background-promo">
-      <div class="promo__structure page__centerer">
-        <div class="promo__text-container">
-          <h2 class="promo__title">Функциональное<br>питание&nbsp;для&nbsp;котов</h2>
-          <p class="promo__text">Занялся собой? Займись котом!</p>
-        </div>
-        <div class="promo__image-container">
-          <img src="img/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__image">
-        </div>
-        <a href="#" class="promo__button button">Подобрать программу</a>
+    <section class="promo background-promo promo__structure page__centerer">
+      <div class="promo__text-container">
+        <h2 class="promo__title">Функциональное<br>питание&nbsp;для&nbsp;котов</h2>
+        <p class="promo__text">Занялся собой? Займись котом!</p>
       </div>
+      <div class="promo__image-container">
+        <img src="img/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__image">
+      </div>
+      <a href="#" class="promo__button button">Подобрать программу</a>
     </section>
     <div class="page__centerer">
       <section class="nutrition-programm">
@@ -98,8 +96,6 @@
     {% include "./templates/contacts.twig" %}
   </main>
   {% include "./templates/footer.twig" %}
-
-  <script src="./js/menu-button.min.js"></script>
 </body>
 
 </html>
