--- a/source/index.html
+++ b/source/index.html
@@ -15,15 +15,17 @@
     <h1 class="page__title-hidden visually-hidden">
       Cat energy
     </h1>
-    <section class="promo background-promo promo__structure page__centerer">
-      <div class="promo__text-container">
-        <h2 class="promo__title">Функциональное<br>питание&nbsp;для&nbsp;котов</h2>
-        <p class="promo__text">Занялся собой? Займись котом!</p>
+    <section class="promo background-promo">
+      <div class="promo__structure page__centerer">
+        <div class="promo__text-container">
+          <h2 class="promo__title">Функциональное<br>питание&nbsp;для&nbsp;котов</h2>
+          <p class="promo__text">Занялся собой? Займись котом!</p>
+        </div>
+        <div class="promo__image-container">
+          <img src="img/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__image">
+        </div>
+        <a href="#" class="promo__button button">Подобрать программу</a>
       </div>
-      <div class="promo__image-container">
-        <img src="img/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__image">
-      </div>
-      <a href="#" class="promo__button button">Подобрать программу</a>
     </section>
     <div class="page__centerer">
       <section class="nutrition-programm">
